# token-titans

./: README.md
backend/: app.js  package-lock.json  package.json  server.js
backend/db/: index.js
backend/routes/: index.js
backend/token-script/: main.js
frontend/: package-lock.json  package.json
frontend/pages/: index.tsx
my-webapp/: package-lock.json  package.json  tailwind.config.js  vercel.json
my-webapp/components/: ActivitiesSection.tsx  Header.tsx  Layout.tsx  Nav.tsx  WalletLoader.tsx
my-webapp/components/Badge/: BadgeInfo.tsx  BadgetReward.tsx  BadgetsSection.tsx
my-webapp/components/Content/: CommunityContent.tsx  CreateContent.tsx
my-webapp/components/Profile/: Avatar.tsx  EditButton.tsx  EditProfileWindow.tsx  PopupComponent.tsx  ProfileDetails.tsx  ProfileInfo.tsx  ProfileSection.tsx
my-webapp/hooks/: client.tsx
my-webapp/pages/: content.tsx  index.tsx  nft.tsx  profile.tsx  send.tsx
my-webapp/styles/: daisyui-themes.json
smart_contract/: Cargo.toml
smart_contract/src/: contract.rs  helpers.rs  lib.rs  main.rs
